--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./static/css/about.css?2501" />
 		<link rel="icon" href="./favicon.ico" /> <!-- 32×32 -->
-		<link rel="icon" href="./images/icons/icon.svg" type="image/svg+xml" />
-		<link rel="apple-touch-icon" href="./images/icons/180.png" />  <!-- 180×180 -->
+		<link rel="icon" href="./static/images/icons/icon.svg" type="image/svg+xml" />
+		<link rel="shortcut icon" href="./static/images/icons/180.png" />
+		<link rel="apple-touch-icon" href="./static/images/icons/180.png" />  <!-- 180×180 -->
 	</head>
 	<body>
 		<header>
