--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</header>
 		<main>
-			<a href="https://t.me/matu4ak" target="_blank" rel="nofollow">
+			<a href="https://t.me/salomatu4ak" target="_blank" rel="nofollow">
 				<div class="main-block">
 					<div class="main-block-wrap">
 						<div class="block-image">
